# storybooker

./: README.md  agent.py  main.py  mcpserver.py  pyproject.toml
backend/: Dockerfile  Procfile  fly.toml  pyproject.toml  requirements.txt
backend/src/: agent.py  mcpserver.py  server.py
backend/src/routes/: app.py
backend/src/services/: agent.py  mcpserver.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: Home.jsx  main.jsx  theme.js
frontend/src/components/: DeleteButton.jsx  LogoutButton.jsx
frontend/src/pages/: App.jsx  Dashboard.jsx  Examples.jsx  ForgotPassword.jsx  Generate.jsx  History.jsx  Login.jsx  ResetPassword.jsx  Signup.jsx
frontend/src/themes/: homeTheme.js
server/src/services/: agent.py  main.py
